--- a/features/collection/thresholding/impl/pom.xml
+++ b/features/collection/thresholding/impl/pom.xml
@@ -122,7 +122,11 @@
       <artifactId>org.opennms.core.ipc.rpc.utils</artifactId>
       <version>${project.version}</version>
     </dependency>
-    
+    <dependency>
+      <groupId>org.opennms.core.mate</groupId>
+      <artifactId>org.opennms.core.mate.api</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
