--- a/features/container/sentinel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/features/container/sentinel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -52,6 +52,7 @@ featuresBoot = \
     config/${karafVersion}, \
     kar/${karafVersion}, \
     guava/${guavaOsgiVersion}, \
+    netty/${netty4Version}, \
     scv-jceks-impl/${project.version}, \
     scv-shell/${project.version}, \
     karaf-extender/${project.version}
