--- a/features/search/providers/pom.xml
+++ b/features/search/providers/pom.xml
@@ -48,7 +48,7 @@
     </dependency>
     <dependency>
       <groupId>org.opennms.core.mate</groupId>
-      <artifactId>org.opennms.core.mate.model</artifactId>
+      <artifactId>org.opennms.core.mate.api</artifactId>
     </dependency>
   </dependencies>
 </project>
