--- a/opennms-provision/opennms-detectorclient-rpc/pom.xml
+++ b/opennms-provision/opennms-detectorclient-rpc/pom.xml
@@ -67,6 +67,10 @@
       <artifactId>org.opennms.core.ipc.rpc.utils</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.opennms.core.mate</groupId>
+      <artifactId>org.opennms.core.mate.api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.opennms.dependencies</groupId>
       <artifactId>dnsjava-dependencies</artifactId>
       <type>pom</type>
