--- a/core/ipc/rpc/jms-impl/pom.xml
+++ b/core/ipc/rpc/jms-impl/pom.xml
@@ -36,6 +36,11 @@
       <artifactId>org.opennms.core.ipc.rpc.camel</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.opennms.core.ipc.rpc</groupId>
+      <artifactId>org.opennms.core.ipc.rpc.mock-impl</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.opennms.features.distributed</groupId>
       <artifactId>core-api</artifactId>
       <version>${project.version}</version>
