--- a/features/collection/thresholding/itests/pom.xml
+++ b/features/collection/thresholding/itests/pom.xml
@@ -26,12 +26,11 @@
         <dependency>
             <groupId>org.opennms</groupId>
             <artifactId>opennms-services</artifactId>
-            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.opennms.core.test-api</groupId>
-            <artifactId>org.opennms.core.test-api.lib</artifactId>
+            <groupId>org.opennms.core.mate</groupId>
+            <artifactId>org.opennms.core.mate.test-api</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
