--- a/features/flows/api/pom.xml
+++ b/features/flows/api/pom.xml
@@ -37,6 +37,10 @@
       <artifactId>org.opennms.core.ipc.rpc.utils</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.opennms.core.mate</groupId>
+      <artifactId>org.opennms.core.mate.api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.opennms.dependencies</groupId>
       <artifactId>oia-dependencies</artifactId>
       <type>pom</type>
