--- a/features/nrtg/protocolcollector/snmp/pom.xml
+++ b/features/nrtg/protocolcollector/snmp/pom.xml
@@ -49,6 +49,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+        <groupId>org.opennms.core.ipc.rpc</groupId>
+        <artifactId>org.opennms.core.ipc.rpc.mock-impl</artifactId>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
         <groupId>org.opennms.core.test-api</groupId>
         <artifactId>org.opennms.core.test-api.lib</artifactId>
         <scope>test</scope>
