--- a/features/perspectivepoller/pom.xml
+++ b/features/perspectivepoller/pom.xml
@@ -121,6 +121,10 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.opennms.core.mate</groupId>
+      <artifactId>org.opennms.core.mate.test-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.opennms.features.poller</groupId>
       <artifactId>org.opennms.features.poller.client-rpc</artifactId>
       <scope>test</scope>
