--- a/features/reporting/jasper-reports-compiler/pom.xml
+++ b/features/reporting/jasper-reports-compiler/pom.xml
@@ -35,6 +35,10 @@
   </build>
   <dependencies>
     <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.opennms.dependencies</groupId>
       <artifactId>jasper-shaded</artifactId>
     </dependency>
