--- a/features/telemetry/protocols/flows/pom.xml
+++ b/features/telemetry/protocols/flows/pom.xml
@@ -65,6 +65,10 @@
       <artifactId>opennms-dao-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.opennms.core.mate</groupId>
+      <artifactId>org.opennms.core.mate.api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.dropwizard.metrics</groupId>
       <artifactId>metrics-core</artifactId>
       <version>${dropwizardMetricsVersion}</version>
