--- a/pom.xml
+++ b/pom.xml
@@ -1734,7 +1734,7 @@
     <minaVersion>2.2.2</minaVersion>
     <mockitoVersion>3.12.4</mockitoVersion>
     <netty3Version>3.10.6.Final</netty3Version>
-    <netty4Version>4.1.100.Final</netty4Version>
+    <netty4Version>4.1.101.Final</netty4Version>
     <newtsVersion>1.5.7</newtsVersion>
     <paxCdiVersion>1.1.4</paxCdiVersion>
     <paxExamVersion>4.13.5</paxExamVersion>
@@ -2355,6 +2355,11 @@
       </dependency>
       <dependency>
         <groupId>org.opennms.core.ipc.rpc</groupId>
+        <artifactId>org.opennms.core.ipc.rpc.mock-impl</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.opennms.core.ipc.rpc</groupId>
         <artifactId>org.opennms.core.ipc.rpc.utils</artifactId>
         <version>${project.version}</version>
       </dependency>
@@ -2387,6 +2392,12 @@
         <groupId>org.opennms.core.mate</groupId>
         <artifactId>org.opennms.core.mate.model</artifactId>
         <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.opennms.core.mate</groupId>
+        <artifactId>org.opennms.core.mate.test-api</artifactId>
+        <version>${project.version}</version>
+        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.opennms.core</groupId>
@@ -2451,12 +2462,6 @@
       </dependency>
       <dependency>
         <groupId>org.opennms.core.test-api</groupId>
-        <artifactId>org.opennms.core.test-api.lib</artifactId>
-        <version>${project.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.opennms.core.test-api</groupId>
         <artifactId>org.opennms.core.test-api.activemq</artifactId>
         <version>${project.version}</version>
         <scope>test</scope>
@@ -2488,6 +2493,12 @@
       <dependency>
         <groupId>org.opennms.core.test-api</groupId>
         <artifactId>org.opennms.core.test-api.http</artifactId>
+        <version>${project.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.opennms.core.test-api</groupId>
+        <artifactId>org.opennms.core.test-api.lib</artifactId>
         <version>${project.version}</version>
         <scope>test</scope>
       </dependency>
