--- a/ui/package.json
+++ b/ui/package.json
@@ -101,6 +101,7 @@
     "unplugin-vue-components": "^0.22.12",
     "vite": "^4.3.9",
     "vitest": "^0.34.6",
+    "vitest-mock-extended": "^1.3.1",
     "vue-eslint-parser": "^9.3.1",
     "vue-tsc": "^1.6.5"
   },
