--- a/container/karaf/src/main/filtered-resources/etc/custom.properties
+++ b/container/karaf/src/main/filtered-resources/etc/custom.properties
@@ -39,6 +39,7 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         sun.net.dns,\
         sun.net.spi.nameservice,\
         sun.reflect,\
+        sun.security.x509,\
         javax.jms;version=1.1.0,\
         javax.mail;version=1.6.7,\
         javax.mail.internet;version=1.6.7,\
