NMS-16131: Added to Minion/Sentinel custom.properties

--- a/features/container/minion/src/main/filtered-resources/etc/custom.properties
+++ b/features/container/minion/src/main/filtered-resources/etc/custom.properties
@@ -30,4 +30,5 @@ karaf.systemBundlesStartLevel=50
 org.osgi.framework.system.packages.extra=sun.nio.ch, \
               sun.misc, \
               sun.net.dns, \
-              sun.reflect
+              sun.reflect, \
+              sun.security.x509
