--- a/container/shared/src/main/filtered-resources/etc/overrides.properties
+++ b/container/shared/src/main/filtered-resources/etc/overrides.properties
@@ -17,6 +17,18 @@ mvn:org.apache.sshd/sshd-scp/${minaSshdVersion}
 mvn:org.apache.sshd/sshd-sftp/${minaSshdVersion}
 mvn:org.codehaus.jettison/jettison/${jettisonVersion}
 
+# Netty needs to match everywhere
+mvn:io.netty/netty-buffer/${netty4Version}
+mvn:io.netty/netty-codec/${netty4Version}
+mvn:io.netty/netty-codec-dns/${netty4Version}
+mvn:io.netty/netty-common/${netty4Version}
+mvn:io.netty/netty-handler/${netty4Version}
+mvn:io.netty/netty-resolver/${netty4Version}
+mvn:io.netty/netty-resolver-dns/${netty4Version}
+mvn:io.netty/netty-transport/${netty4Version}
+mvn:io.netty/netty-transport-native-epoll/${netty4Version}
+mvn:io.netty/netty-transport-native-unix-common/${netty4Version}
+
 # Just In Case (tm) make sure Jetty always gets only our vetted version
 mvn:org.eclipse.jetty/jetty-client/${jettyVersion};range=[9.4,10)
 mvn:org.eclipse.jetty/jetty-continuation/${jettyVersion};range=[9.4,10)
