--- a/smoke-test/pom.xml
+++ b/smoke-test/pom.xml
@@ -822,6 +822,11 @@
       <version>0.2.11</version>
     </dependency>
     <dependency>
+      <groupId>net.i2p.crypto</groupId>
+      <artifactId>eddsa</artifactId>
+      <version>0.3.0</version>
+    </dependency>
+    <dependency>
       <groupId>com.hubspot.jinjava</groupId>
       <artifactId>jinjava</artifactId>
       <version>2.6.0</version>
