Make sure the same Jolokia version is used everywhere

--- a/container/karaf/src/main/filtered-resources/etc/overrides.properties
+++ b/container/karaf/src/main/filtered-resources/etc/overrides.properties
@@ -16,6 +16,8 @@ mvn:org.apache.sshd/sshd-osgi/${minaSshdVersion}
 mvn:org.apache.sshd/sshd-scp/${minaSshdVersion}
 mvn:org.apache.sshd/sshd-sftp/${minaSshdVersion}
 mvn:org.codehaus.jettison/jettison/${jettisonVersion}
+mvn:org.jolokia/jolokia-osgi/${jolokiaVersion}
+mvn:org.jolokia/jolokia-client-java/${jolokiaVersion}
 
 # Just In Case (tm) make sure Jetty always gets only our vetted version
 mvn:org.eclipse.jetty/jetty-client/${jettyVersion};range=[9.4,10)
