--- a/pom.xml
+++ b/pom.xml
@@ -1711,7 +1711,7 @@
     <jnaVersion>5.12.1</jnaVersion>
     <jnrVersion>3.1.17</jnrVersion>
     <jodaTimeVersion>2.12.5</jodaTimeVersion>
-    <jolokiaClientVersion>1.7.2</jolokiaClientVersion>
+    <jolokiaVersion>1.7.2</jolokiaVersion>
     <jqwikVersion>1.6.5</jqwikVersion>
     <jrrdVersion>1.1.0</jrrdVersion>
     <jrrd2Version>2.0.3</jrrd2Version>
@@ -4722,7 +4722,7 @@
       <dependency>
         <groupId>org.jolokia</groupId>
         <artifactId>jolokia-client-java</artifactId>
-        <version>${jolokiaClientVersion}</version>
+        <version>${jolokiaVersion}</version>
       <exclusions>
         <exclusion>
           <artifactId>commons-logging</artifactId>
