--- a/pom.xml
+++ b/pom.xml
@@ -1635,10 +1635,9 @@
     <ecjVersion>4.4.2</ecjVersion>
     <eclipseGeminiVersion>2.1.0.RELEASE</eclipseGeminiVersion>
     <eclipselinkVersion>2.5.1</eclipselinkVersion>
+    <eddsaVersion>0.3.0</eddsaVersion>
     <elasticsearchNettyVersion>4.1.69.Final</elasticsearchNettyVersion>
     <elasticsearchTargetVersion>7.6.2</elasticsearchTargetVersion>
-    <eddsaVersion>0.3.0</eddsaVersion>
-    <felixConfigadminVersion>1.9.22</felixConfigadminVersion>
     <felixBridgeVersion>4.0.12</felixBridgeVersion>
     <felixProxyVersion>3.0.6</felixProxyVersion>
     <fopVersion>2.9</fopVersion>
@@ -1722,6 +1721,20 @@
     <junit5Version>5.9.2</junit5Version>
     <junit5PlatformVersion>1.9.2</junit5PlatformVersion>
     <karafVersion>4.3.6</karafVersion>
+    <!-- BEGIN: versions must match versions provided by embedded Karaf -->
+    <felixCmJsonVersion>1.0.6</felixCmJsonVersion>
+    <felixConfigadminVersion>1.9.22</felixConfigadminVersion>
+    <felixConfigadminPluginInterpolationVersion>1.1.4</felixConfigadminPluginInterpolationVersion>
+    <felixCoordinatorVersion>1.0.2</felixCoordinatorVersion>
+    <felixConfiguratorVersion>1.0.14</felixConfiguratorVersion>
+    <felixConverterVersion>1.0.14</felixConverterVersion>
+    <felixFileinstallVersion>3.7.4</felixFileinstallVersion>
+    <felixMetatypeVersion>1.2.4</felixMetatypeVersion>
+    <jansiVersion>2.4.0</jansiVersion>
+    <osgiUtilVersion>1.2.0</osgiUtilVersion>
+    <paxUrlAetherVersion>2.6.10</paxUrlAetherVersion>
+    <slingJohnzonVersion>1.2.6</slingJohnzonVersion>
+    <!-- END: versions must match versions provided by embedded Karaf -->
     <kafkaBundleVersion>3.5.1_1</kafkaBundleVersion>
     <kafkaVersion>3.6.0</kafkaVersion>
     <kotlinVersion>1.9.10</kotlinVersion>
