--- a/pom.xml
+++ b/pom.xml
@@ -1643,7 +1643,6 @@
     <elasticsearchNettyVersion>${netty4Version}</elasticsearchNettyVersion>
     <elasticsearchDriftPluginVersion>2.0.5</elasticsearchDriftPluginVersion>
     <elasticsearchTargetVersion>7.17.9</elasticsearchTargetVersion>
-    <felixConfigadminVersion>1.9.22</felixConfigadminVersion>
     <felixBridgeVersion>4.1.6</felixBridgeVersion>
     <felixProxyVersion>3.0.6</felixProxyVersion>
     <fopVersion>2.9</fopVersion>
@@ -1729,6 +1728,20 @@
     <junit5PlatformVersion>1.9.2</junit5PlatformVersion>
     <karafVersion>4.3.6</karafVersion>
     <karafMavenPluginVersion>4.4.3</karafMavenPluginVersion>
+    <!-- BEGIN: versions must match versions provided by embedded Karaf -->
+    <felixCmJsonVersion>1.0.6</felixCmJsonVersion>
+    <felixConfigadminVersion>1.9.22</felixConfigadminVersion>
+    <felixConfigadminPluginInterpolationVersion>1.1.4</felixConfigadminPluginInterpolationVersion>
+    <felixCoordinatorVersion>1.0.2</felixCoordinatorVersion>
+    <felixConfiguratorVersion>1.0.14</felixConfiguratorVersion>
+    <felixConverterVersion>1.0.14</felixConverterVersion>
+    <felixFileinstallVersion>3.7.4</felixFileinstallVersion>
+    <felixMetatypeVersion>1.2.4</felixMetatypeVersion>
+    <jansiVersion>2.4.0</jansiVersion>
+    <osgiUtilVersion>1.2.0</osgiUtilVersion>
+    <paxUrlAetherVersion>2.6.10</paxUrlAetherVersion>
+    <slingJohnzonVersion>1.2.6</slingJohnzonVersion>
+    <!-- END: versions must match versions provided by embedded Karaf -->
     <kafkaBundleVersion>3.5.1_1</kafkaBundleVersion>
     <kafkaVersion>3.6.0</kafkaVersion>
     <kotlinVersion>1.9.10</kotlinVersion>
