fix a few more references to jolokiaClientVersion

--- a/container/shared/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/container/shared/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -56,7 +56,7 @@ featuresBoot = \
     karaf-extender/${project.version}, \
     hawtio/${hawtio.version}, \
     http, \
-    jolokia/${jolokiaClientVersion}
+    jolokia/${jolokiaVersion}
 
 #
 # Resource repositories (OBR) that the features resolver can use
