fix a few issues with the Karaf 4.3.10 upgrade

--- a/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -47,7 +47,7 @@ featuresBoot = ( \
     shell-compat,/${karafVersion} \
     deployer/${karafVersion}, \
     diagnostic/${karafVersion}, \
-    wrap/2.6.10, \
+    wrap, \
     bundle/${karafVersion}, \
     config/${karafVersion}, \
     kar/${karafVersion}, \
