--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -4,6 +4,7 @@ title: Horizon
 asciidoc:
   attributes:
     full-display-version: '32.0.6-SNAPSHOT'
+    package-prefix: horizon
     experimental: true
     source-language: asciidoc@
     xrefstyle: short@
