--- a/features/container/sentinel/src/main/filtered-resources/etc/custom.properties
+++ b/features/container/sentinel/src/main/filtered-resources/etc/custom.properties
@@ -31,4 +31,5 @@ org.osgi.framework.system.packages.extra=sun.nio.ch, \
               sun.misc, \
               sun.net.dns, \
               sun.reflect, \
+              sun.security.ssl, \
               sun.security.x509
