fix a typo in our config that failed to load versioned shell-compat

--- a/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -44,7 +44,7 @@ featuresBoot = ( \
     service/${karafVersion}, \
     jaas-deployer/${karafVersion}, \
     jasypt-encryption/${karafVersion}, \
-    shell-compat,/${karafVersion} \
+    shell-compat/${karafVersion}, \
     deployer/${karafVersion}, \
     diagnostic/${karafVersion}, \
     wrap, \
