--- a/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -34,7 +34,6 @@ featuresBoot = ( \
     package/${karafVersion}, \
     log/${karafVersion}, \
     ssh/${karafSshdVersion}, \
-    aries-blueprint/${karafVersion}, \
     framework/${karafVersion}, \
     system/${karafVersion}, \
     eventadmin/${karafVersion}, \
@@ -42,17 +41,21 @@ featuresBoot = ( \
     shell/${karafVersion}, \
     management/${karafVersion}, \
     service/${karafVersion}, \
-    jaas-deployer/${karafVersion}, \
-    jasypt-encryption/${karafVersion}, \
-    shell-compat/${karafVersion}, \
+    jaas/${karafVersion}, \
     deployer/${karafVersion}, \
     diagnostic/${karafVersion}, \
-    wrap, \
+    wrap/${paxUrlAetherVersion}, \
     bundle/${karafVersion}, \
     config/${karafVersion}, \
-    kar/${karafVersion}, \
-    opennms-config-management-osgi-cm \
+    kar/${karafVersion} \
   ), \
+  ( \
+    aries-blueprint/${karafVersion}, \
+    jaas-deployer/${karafVersion}, \
+    jasypt-encryption/${karafVersion}, \
+    shell-compat/${karafVersion} \
+  ), \
+  opennms-config-management-osgi-cm, \
   opennms-http-whiteboard,\
   opennms-jaas-login-module,\
   karaf-extender, \
