--- a/container/shared/pom.xml
+++ b/container/shared/pom.xml
@@ -75,11 +75,14 @@
                     </startupFeatures>
                     <bootFeatures>
                         <!-- Karaf "standard" features to include in the core -->
-                        <feature>standard</feature>
-                        <feature>jaas</feature>
-                        <feature>jasypt-encryption</feature>
+                        <feature>aries-blueprint</feature>
                         <feature>http</feature>
                         <feature>http-whiteboard</feature>
+                        <feature>jaas</feature>
+                        <feature>jaas-deployer</feature>
+                        <feature>jasypt-encryption</feature>
+                        <feature>shell-compat</feature>
+                        <feature>standard</feature>
                         <feature>war</feature>
 
                         <!-- OPENNMS: Add our enhancements to the container -->
