--- a/container/shared/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/container/shared/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -56,6 +56,8 @@ featuresBoot = ( \
   http, \
   guava/${guavaOsgiVersion}, \
   karaf-extender/${project.version}, \
+  scv-jceks-impl/${project.version}, \
+  scv-shell/${project.version}, \
   hawtio/${hawtio.version}, \
   jolokia/${jolokiaVersion}
 
