--- a/container/extender/pom.xml
+++ b/container/extender/pom.xml
@@ -26,6 +26,7 @@
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>osgi.core</artifactId>
+            <version>${osgiVersion}</version>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
@@ -53,10 +54,6 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.opennms.core.test-api</groupId>
-            <artifactId>org.opennms.core.test-api.lib</artifactId>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
