--- a/container/shared/src/main/filtered-resources/etc/startup.properties
+++ b/container/shared/src/main/filtered-resources/etc/startup.properties
@@ -18,6 +18,8 @@ mvn\:org.osgi/org.osgi.util.function/${osgiUtilVersion} = 9
 mvn\:org.osgi/org.osgi.util.promise/${osgiUtilVersion} = 9
 mvn\:org.apache.felix/org.apache.felix.coordinator/${felixCoordinatorVersion} = 9
 mvn\:org.apache.felix/org.apache.felix.converter/${felixConverterVersion} = 9
+# OPENNMS: Add part 1 of ConfigManager
+mvn\:org.opennms.features.config.osgi/org.opennms.features.config.osgi.del/${project.version} = 9
 mvn\:org.apache.felix/org.apache.felix.configadmin/${felixConfigadminVersion} = 10
 mvn\:org.apache.felix/org.apache.felix.configurator/${felixConfiguratorVersion} = 11
 mvn\:org.apache.sling/org.apache.sling.commons.johnzon/${slingJohnzonVersion} = 11
