--- a/container/shared/src/main/filtered-resources/etc/startup.properties
+++ b/container/shared/src/main/filtered-resources/etc/startup.properties
@@ -1,31 +1,27 @@
+# Bundles to be started on startup, with startlevel
+mvn\:org.apache.karaf.features/org.apache.karaf.features.extension/${karafVersion} = 1
+mvn\:org.apache.karaf.services/org.apache.karaf.services.eventadmin/${karafVersion} = 5
+mvn\:org.apache.felix/org.apache.felix.metatype/${felixMetatypeVersion} = 5
+mvn\:org.ops4j.pax.url/pax-url-aether/${paxUrlAetherVersion} = 5
+mvn\:org.ops4j.pax.logging/pax-logging-api/${paxLoggingVersion} = 8
+mvn\:org.ops4j.pax.logging/pax-logging-log4j2/${paxLoggingVersion} = 8
+mvn\:org.fusesource.jansi/jansi/${jansiVersion} = 8
+mvn\:org.osgi/org.osgi.util.promise/${osgiUtilVersion} = 9
+mvn\:org.apache.felix/org.apache.felix.coordinator/${felixCoordinatorVersion} = 9
+mvn\:org.apache.felix/org.apache.felix.converter/${felixConverterVersion} = 9
+mvn\:org.osgi/org.osgi.util.function/${osgiUtilVersion} = 9
+mvn\:org.apache.felix/org.apache.felix.configadmin/${felixConfigadminVersion} = 10
+mvn\:org.apache.felix/org.apache.felix.configadmin.plugin.interpolation/${felixConfigadminPluginInterpolationVersion} = 11
+mvn\:org.apache.felix/org.apache.felix.configurator/${felixConfiguratorVersion} = 11
+mvn\:org.apache.karaf.shell/org.apache.karaf.shell.core/${karafVersion} = 11
+mvn\:org.apache.karaf.config/org.apache.karaf.config.core/${karafVersion} = 11
+mvn\:org.apache.sling/org.apache.sling.commons.johnzon/${slingJohnzonVersion} = 11
+mvn\:org.apache.felix/org.apache.felix.cm.json/${felixCmJsonVersion} = 11
+mvn\:org.apache.felix/org.apache.felix.fileinstall/${felixFileinstallVersion} = 12
+mvn\:org.apache.karaf.features/org.apache.karaf.features.core/${karafVersion} = 15
+
 # OPENNMS: Add JNA bundles to prevent jline from refreshing (KARAF-5251)
 mvn\:net.java.dev.jna/jna/${jnaVersion} = 5
 mvn\:net.java.dev.jna/jna-platform/${jnaVersion} = 5
 # OPENNMS: Add MINA bundles to prevent mina-sshd-core from refreshing (KARAF-5384)
 mvn\:org.apache.mina/mina-core/${minaVersion} = 10
-
-# Bundles to be started on startup, with startlevel
-mvn\:org.apache.karaf.features/org.apache.karaf.features.extension/${karafVersion} = 1
-mvn\:org.apache.felix/org.apache.felix.metatype/${felixMetatypeVersion} = 5
-mvn\:org.ops4j.pax.url/pax-url-aether/${paxUrlAetherVersion} = 5
-mvn\:org.apache.karaf.services/org.apache.karaf.services.eventadmin/${karafVersion} = 5
-mvn\:org.ops4j.pax.logging/pax-logging-log4j2/${paxLoggingVersion} = 8
-mvn\:org.ops4j.pax.logging/pax-logging-api/${paxLoggingVersion} = 8
-mvn\:org.fusesource.jansi/jansi/${jansiVersion} = 8
-# OPENNMS: Add jline at startup for config shell stuff
-mvn\:org.jline/jline/${jlineVersion} = 9
-mvn\:org.osgi/org.osgi.util.function/${osgiUtilVersion} = 9
-mvn\:org.osgi/org.osgi.util.promise/${osgiUtilVersion} = 9
-mvn\:org.apache.felix/org.apache.felix.coordinator/${felixCoordinatorVersion} = 9
-mvn\:org.apache.felix/org.apache.felix.converter/${felixConverterVersion} = 9
-# OPENNMS: Add part 1 of ConfigManager
-mvn\:org.opennms.features.config.osgi/org.opennms.features.config.osgi.del/${project.version} = 9
-mvn\:org.apache.felix/org.apache.felix.configadmin/${felixConfigadminVersion} = 10
-mvn\:org.apache.felix/org.apache.felix.configurator/${felixConfiguratorVersion} = 11
-mvn\:org.apache.sling/org.apache.sling.commons.johnzon/${slingJohnzonVersion} = 11
-mvn\:org.apache.felix/org.apache.felix.configadmin.plugin.interpolation/${felixConfigadminPluginInterpolationVersion} = 11
-mvn\:org.apache.karaf.config/org.apache.karaf.config.core/${karafVersion} = 11
-mvn\:org.apache.felix/org.apache.felix.cm.json/${felixCmJsonVersion} = 11
-mvn\:org.apache.felix/org.apache.felix.fileinstall/${felixFileinstallVersion} = 12
-mvn\:org.apache.karaf.features/org.apache.karaf.features.core/${karafVersion} = 15
-
