Revert "fix a few issues with the Karaf 4.3.10 upgrade"
This reverts commit 0529ed082de6cff61cbf89509ea957696b049464.

--- a/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -47,7 +47,7 @@ featuresBoot = ( \
     shell-compat/${karafVersion}, \
     deployer/${karafVersion}, \
     diagnostic/${karafVersion}, \
-    wrap, \
+    wrap/2.6.10, \
     bundle/${karafVersion}, \
     config/${karafVersion}, \
     kar/${karafVersion}, \
