--- a/pom.xml
+++ b/pom.xml
@@ -1729,7 +1729,6 @@
     <junit5PlatformVersion>1.9.2</junit5PlatformVersion>
     <karafVersion>4.3.10</karafVersion>
     <!-- BEGIN: versions must match versions provided by embedded Karaf -->
-    <eclipseOsgiVersion>3.17.200</eclipseOsgiVersion>
     <felixCmJsonVersion>1.0.6</felixCmJsonVersion>
     <felixConfigadminVersion>1.9.26</felixConfigadminVersion>
     <felixConfigadminPluginInterpolationVersion>1.2.8</felixConfigadminPluginInterpolationVersion>
@@ -1738,7 +1737,6 @@
     <felixConverterVersion>1.0.14</felixConverterVersion>
     <felixFileinstallVersion>3.7.4</felixFileinstallVersion>
     <felixMetatypeVersion>1.2.4</felixMetatypeVersion>
-    <istackCommonsRuntimeVersion>3.0.12</istackCommonsRuntimeVersion>
     <jansiVersion>2.4.0</jansiVersion>
     <osgiUtilVersion>1.2.0</osgiUtilVersion>
     <paxLoggingVersion>2.0.19</paxLoggingVersion>
@@ -4459,7 +4457,7 @@
       <dependency>
         <groupId>com.sun.istack</groupId>
         <artifactId>istack-commons-runtime</artifactId>
-        <version>${istackCommonsRuntimeVersion}</version>
+        <version>3.0.10</version>
       </dependency>
       <dependency>
         <groupId>org.glassfish.jaxb</groupId>
