normalize some ActiveMQ/JMS initialization

--- a/container/karaf/src/main/filtered-resources/etc/custom.properties
+++ b/container/karaf/src/main/filtered-resources/etc/custom.properties
@@ -1191,6 +1191,7 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         org.springframework.web.servlet.view.xslt;version=${springVersion},\
         org.springframework.web.util;version=${springVersion},\
         org.opennms.netmgt;version=${opennms.osgi.version},\
+        org.opennms.netmgt.activemq.auth;version=${opennms.osgi.version},\
         org.opennms.netmgt.charts;version=${opennms.osgi.version},\
         org.opennms.netmgt.collectd;version=${opennms.osgi.version},\
         org.opennms.netmgt.collection.api;version=${opennms.osgi.version},\
@@ -1216,6 +1217,7 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         org.opennms.netmgt.config.users;version=${opennms.osgi.version},\
         org.opennms.netmgt.config.viewsdisplay;version=${opennms.osgi.version},\
         org.opennms.netmgt.config.webuiColors;version=${opennms.osgi.version},\
+        org.opennms.netmgt.daemon;version=${opennms.osgi.version},\
         org.opennms.netmgt.endpoints.grafana.api;version=${opennms.osgi.version},\
         org.opennms.netmgt.endpoints.grafana.persistence.api;version=${opennms.osgi.version},\
         org.opennms.netmgt.flows.classification.persistence.api;version=${opennms.osgi.version},\
@@ -1225,6 +1227,7 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         org.opennms.netmgt.threshd.api;version=${opennms.osgi.version},\
         org.opennms.netmgt.timeseries;version=${opennms.osgi.version},\
         org.opennms.netmgt.timeseries.stats;version=${opennms.osgi.version},\
+        org.opennms.netmgt.vmmgr;version=${opennms.osgi.version},\
         org.opennms.api.integration.ticketing;version=${opennms.osgi.version},\
         org.opennms.api.reporting;version=${opennms.osgi.version},\
         org.opennms.api.reporting.parameter;version=${opennms.osgi.version},\
