--- a/container/shared/src/main/filtered-resources/etc/overrides.properties
+++ b/container/shared/src/main/filtered-resources/etc/overrides.properties
@@ -5,6 +5,22 @@ mvn:com.datastax.cassandra/cassandra-driver-core/${cassandraVersion}
 mvn:com.fasterxml.jackson.core/jackson-annotations/${jackson2Version}
 mvn:com.fasterxml.jackson.core/jackson-core/${jackson2Version}
 mvn:com.fasterxml.jackson.core/jackson-databind/${jackson2Version}
+mvn:com.fasterxml.jackson.dataformat/jackson-dataformat-cbor/${jackson2Version}
+mvn:com.fasterxml.jackson.dataformat/jackson-dataformat-csv/${jackson2Version}
+mvn:com.fasterxml.jackson.dataformat/jackson-dataformat-smile/${jackson2Version}
+mvn:com.fasterxml.jackson.dataformat/jackson-dataformat-xml/${jackson2Version}
+mvn:com.fasterxml.jackson.dataformat/jackson-dataformat-yaml/${jackson2Version}
+mvn:com.fasterxml.jackson.datatype/jackson-datatype-guava/${jackson2Version}
+mvn:com.fasterxml.jackson.datatype/jackson-datatype-jdk8/${jackson2Version}
+mvn:com.fasterxml.jackson.datatype/jackson-datatype-jsr310/${jackson2Version}
+mvn:com.fasterxml.jackson.jaxrs/jackson-jaxrs-base/${jackson2Version}
+mvn:com.fasterxml.jackson.jaxrs/jackson-jaxrs-json-provider/${jackson2Version}
+mvn:com.fasterxml.jackson.jr/jackson-jr-objects/${jackson2Version}
+mvn:com.fasterxml.jackson.module/jackson-module-afterburner/${jackson2Version}
+mvn:com.fasterxml.jackson.module/jackson-module-jaxb-annotations/${jackson2Version}
+mvn:com.fasterxml.jackson.module/jackson-module-jsonSchema/${jackson2Version}
+mvn:com.fasterxml.jackson.module/jackson-module-paranamer/${jackson2Version}
+mvn:com.fasterxml.jackson.module/jackson-module-scala_2.11/${jackson2Version}
 mvn:org.apache.qpid/proton-j/0.34.0
 mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.jasypt/${jasyptVersion}_1
 mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.jasypt-spring31/${jasyptVersion}_1
