test add dao to newts featuer

--- a/features/newts/pom.xml
+++ b/features/newts/pom.xml
@@ -52,6 +52,10 @@
 
     <!-- Dependencies used -->
     <dependency>
+      <groupId>org.opennms</groupId>
+      <artifactId>opennms-dao</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.opennms.dependencies</groupId>
       <artifactId>newts-dependencies</artifactId>
       <type>pom</type>
