NMS-13268: re-enable auto-refresh

--- a/container/shared/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/container/shared/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -84,7 +84,7 @@ featuresBootAsynchronous=false
 #
 # Define if the feature service automatically refreshes bundles
 #
-autoRefresh=false
+#autoRefresh=true
 
 #
 # Service requirements enforcement
