Revert "work around a karaf config.core bug at startup"
This reverts commit c1e3c329514dc4774b88a98bd0848795e804f5e4.

--- a/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -34,6 +34,7 @@ featuresBoot = ( \
     package/${karafVersion}, \
     log/${karafVersion}, \
     ssh/${karafSshdVersion}, \
+    aries-blueprint/${karafVersion}, \
     framework/${karafVersion}, \
     system/${karafVersion}, \
     eventadmin/${karafVersion}, \
@@ -41,21 +42,17 @@ featuresBoot = ( \
     shell/${karafVersion}, \
     management/${karafVersion}, \
     service/${karafVersion}, \
-    jaas/${karafVersion}, \
-    deployer/${karafVersion}, \
-    diagnostic/${karafVersion}, \
-    wrap/${paxUrlAetherVersion}, \
-    bundle/${karafVersion}, \
-    config/${karafVersion}, \
-    kar/${karafVersion} \
-  ), \
-  ( \
-    aries-blueprint/${karafVersion}, \
     jaas-deployer/${karafVersion}, \
     jasypt-encryption/${karafVersion}, \
-    shell-compat/${karafVersion} \
+    shell-compat/${karafVersion}, \
+    deployer/${karafVersion}, \
+    diagnostic/${karafVersion}, \
+    wrap, \
+    bundle/${karafVersion}, \
+    config/${karafVersion}, \
+    kar/${karafVersion}, \
+    opennms-config-management-osgi-cm \
   ), \
-  opennms-config-management-osgi-cm, \
   opennms-http-whiteboard,\
   opennms-jaas-login-module,\
   karaf-extender, \
