--- a/container/shared/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/container/shared/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -35,6 +35,7 @@ featuresBoot = ( \
     package/${karafVersion}, \
     log/${karafVersion}, \
     ssh/${karafSshdVersion}, \
+    aries-blueprint/${karafVersion}, \
     framework/${karafVersion}, \
     system/${karafVersion}, \
     eventadmin/${karafVersion}, \
@@ -43,23 +44,18 @@ featuresBoot = ( \
     management/${karafVersion}, \
     service/${karafVersion}, \
     jaas/${karafVersion}, \
+    jasypt-encryption/${karafVersion}, \
+    shell-compat/${karafVersion}, \
     deployer/${karafVersion}, \
     diagnostic/${karafVersion}, \
-    wrap/${paxUrlAetherVersion}, \
+    wrap, \
     bundle/${karafVersion}, \
     config/${karafVersion}, \
     kar/${karafVersion} \
   ), \
-  ( \
-    aries-blueprint/${karafVersion}, \
-    jaas-deployer/${karafVersion}, \
-    jasypt-encryption/${karafVersion}, \
-    shell-compat/${karafVersion} \
-  ), \
-  commons-codec/${commonsCodecVersion}, \
-  karaf-extender/${project.version},
   http, \
   guava/${guavaOsgiVersion}, \
+  karaf-extender/${project.version}, \
   hawtio/${hawtio.version}, \
   jolokia/${jolokiaVersion}
 
